Fixed jumping zhaw icon

--- a/modultafel.css
+++ b/modultafel.css
@@ -16,7 +16,6 @@ body {
 }
 
 .card-title, .card-text {
-  font-size: 1.2rem !important;
   margin-bottom: 0 !important;
   hyphens: auto;
 }
